--- a/zeppelin-interpreter-shaded/pom.xml
+++ b/zeppelin-interpreter-shaded/pom.xml
@@ -44,6 +44,11 @@
       <version>0.10.2-SNAPSHOT</version>
       <optional>true</optional>
     </dependency>
+    <dependency>
+      <groupId>com.qlangtech.tis</groupId>
+      <artifactId>tis-plugin</artifactId>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
   <build>
