--- a/elasticsearch/pom.xml
+++ b/elasticsearch/pom.xml
@@ -90,6 +90,12 @@
       </plugin>
       <plugin>
         <artifactId>maven-resources-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>copy-interpreter-setting</id>
+            <phase>none</phase>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
         <artifactId>maven-shade-plugin</artifactId>
