--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,7 @@
         <module>zeppelin-distribution</module>
         <module>jdbc-tis</module>
         <module>elasticsearch-tis</module>
+        <module>zeppelin-package</module>
     </modules>
 
     <properties>
