--- a/zeppelin-interpreter-shaded/pom.xml
+++ b/zeppelin-interpreter-shaded/pom.xml
@@ -141,7 +141,8 @@
         </configuration>
         <executions>
           <execution>
-            <phase>package</phase>
+<!--            <phase>package</phase>-->
+            <phase>none</phase>
             <goals>
               <goal>shade</goal>
             </goals>
@@ -154,7 +155,8 @@
         <executions>
           <execution>
             <id>copy-to-interpreter</id>
-            <phase>package</phase>
+<!--            <phase>package</phase>-->
+            <phase>none</phase>
             <goals>
               <goal>run</goal>
             </goals>
@@ -171,7 +173,11 @@
         </executions>
       </plugin>
 
+
+
     </plugins>
+
+
   </build>
 
 </project>
