--- a/zeppelin-package/pom.xml
+++ b/zeppelin-package/pom.xml
@@ -28,7 +28,7 @@
         <dependency>
             <groupId>org.apache.zeppelin</groupId>
             <artifactId>jdbc-tis</artifactId>
-            <version>${project.version}</version>
+            <version>${project.parent.version}</version>
         </dependency>
 
     </dependencies>
