--- a/zeppelin-package/pom.xml
+++ b/zeppelin-package/pom.xml
@@ -8,7 +8,7 @@
         <version>0.10.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
     <groupId>org.apache.zeppelin</groupId>
     <artifactId>zeppelin-package</artifactId>
     <version>${tis.version}</version>
@@ -41,7 +41,7 @@
                 <artifactId>tisasm-maven-plugin</artifactId>
                 <configuration>
                     <descriptor>./assembly.xml</descriptor>
-                    <outputDirectory>../</outputDirectory>
+                    <outputDirectory>./</outputDirectory>
                     <finalName>zeppelin-interpreter</finalName>
                     <appendDeplpyFileName>zeppelin-interpreter.tar.gz</appendDeplpyFileName>
                     <appendAssemblyId>false</appendAssemblyId>
