Refactor JdbcInterpreter for DataSourceFactoryPluginStore getter process

--- a/elasticsearch-tis/pom.xml
+++ b/elasticsearch-tis/pom.xml
@@ -27,6 +27,7 @@
         <dependency>
             <groupId>com.qlangtech.tis</groupId>
             <artifactId>tis-plugin</artifactId>
+            <version>${tis.version}</version>
         </dependency>
 
     </dependencies>
