--- a/zeppelin-package/pom.xml
+++ b/zeppelin-package/pom.xml
@@ -3,35 +3,37 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>zeppelin</artifactId>
+        <artifactId>zeppelin-distribution</artifactId>
         <groupId>org.apache.zeppelin</groupId>
         <version>0.10.2-SNAPSHOT</version>
+        <relativePath>../zeppelin-distribution/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
     <groupId>org.apache.zeppelin</groupId>
     <artifactId>zeppelin-package</artifactId>
-    <version>${tis.version}</version>
+    <!--    <version>${tis.version}</version>-->
     <properties>
 
 
         <tis.release.repository.host>http://tis-release.oss-cn-beijing.aliyuncs.com</tis.release.repository.host>
         <zeppelin.raw.package.name>zeppelin-0.10.1-bin-all</zeppelin.raw.package.name>
+        <zeppelin.web.angular.war>zeppelin-web-angular-0.10.1.war</zeppelin.web.angular.war>
     </properties>
 
 
     <dependencies>
-        <dependency>
-            <groupId>org.apache.zeppelin</groupId>
-            <artifactId>elasticsearch-tis</artifactId>
-            <version>${project.parent.version}</version>
-        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>org.apache.zeppelin</groupId>-->
+        <!--            <artifactId>zeppelin-distribution</artifactId>-->
+        <!--            <version>${project.parent.version}</version>-->
+        <!--        </dependency>-->
 
-        <dependency>
-            <groupId>org.apache.zeppelin</groupId>
-            <artifactId>jdbc-tis</artifactId>
-            <version>${project.parent.version}</version>
-        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>org.apache.zeppelin</groupId>-->
+        <!--            <artifactId>jdbc-tis</artifactId>-->
+        <!--            <version>${project.parent.version}</version>-->
+        <!--        </dependency>-->
 
     </dependencies>
 
@@ -70,27 +72,31 @@
                                 <!--                                       overwrite="true"-->
                                 <!--                                       compression="gzip"/>-->
                                 <mkdir dir="/tmp/tis"/>
-                                <get src="${tis.release.repository.host}/${zeppelin.raw.package.name}.tgz"
-                                     dest="/tmp/tis/${zeppelin.raw.package.name}.tgz" skipexisting="true"
+                                <get src="${tis.release.repository.host}/${zeppelin.web.angular.war}"
+                                     dest="/tmp/tis/${zeppelin.web.angular.war}" skipexisting="true"
                                      ignoreerrors="false"/>
-                                <untar src="/tmp/tis/${zeppelin.raw.package.name}.tgz"
-                                       dest="${project.build.directory}/${project.build.finalName}"
-                                       overwrite="true"
-                                       compression="none"/>
+
+                                <!---->
+                                <untar src="${project.basedir}/../${project.parent.artifactId}/target/zeppelin-${project.parent.version}.tar.gz"
+                                       dest="${project.build.directory}" overwrite="true" compression="gzip"/>
+
+                                <copy file="/tmp/tis/${zeppelin.web.angular.war}"
+                                      todir="${project.build.directory}/zeppelin-${project.parent.version}"/>
+
                                 <copydir src="${project.basedir}/../interpreter"
-                                         dest="${project.build.directory}/${project.build.finalName}/${zeppelin.raw.package.name}/interpreter"/>
+                                         dest="${project.build.directory}/zeppelin-${project.parent.version}/interpreter"/>
 
                                 <tar destfile="${project.basedir}/../tis-${zeppelin.raw.package.name}.tar.gz"
                                      compression="gzip"
                                      longfile="gnu">
-                                    <tarfileset dir="${project.build.directory}/${project.build.finalName}/${zeppelin.raw.package.name}"
-                                                prefix="/${zeppelin.raw.package.name}"
-                                                preserveLeadingSlashes="true">
+                                    <tarfileset
+                                            dir="${project.build.directory}/zeppelin-${project.parent.version}"
+                                            prefix="/${zeppelin.raw.package.name}"
+                                            preserveLeadingSlashes="true">
                                     </tarfileset>
                                 </tar>
-                                <delete dir="${project.build.directory}/${project.build.finalName}">
+                                <delete dir="${project.build.directory}/zeppelin-${project.parent.version}"/>
 
-                                </delete>
                             </target>
                         </configuration>
                         <goals>
@@ -99,8 +105,18 @@
                     </execution>
                 </executions>
             </plugin>
-        </plugins>
 
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>none</phase>
+                    </execution>
+                </executions>
+            </plugin>
+
+        </plugins>
 
 
     </build>
