--- a/zeppelin-zengine/pom.xml
+++ b/zeppelin-zengine/pom.xml
@@ -46,6 +46,12 @@
   </properties>
 
   <dependencies>
+
+    <dependency>
+      <groupId>com.qlangtech.tis</groupId>
+      <artifactId>tis-builder-api</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>zeppelin-common</artifactId>
