--- a/zeppelin-zengine/pom.xml
+++ b/zeppelin-zengine/pom.xml
@@ -50,6 +50,7 @@
     <dependency>
       <groupId>com.qlangtech.tis</groupId>
       <artifactId>tis-builder-api</artifactId>
+      <version>${tis.version}</version>
     </dependency>
 
     <dependency>
