--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
         <module>zeppelin-interpreter-shaded</module>
         <module>zeppelin-zengine</module>
         <module>zeppelin-display</module>
-        <module>rlang</module>
+<!--        <module>rlang</module>-->
         <!--    <module>zeppelin-jupyter-interpreter</module>-->
         <!--    <module>zeppelin-jupyter-interpreter-shaded</module>-->
         <!--    <module>kotlin</module>-->
@@ -100,7 +100,7 @@
         <!--    <module>zeppelin-client-examples</module>-->
         <!--    <module>zeppelin-web</module>-->
         <module>zeppelin-server</module>
-        <!--        <module>zeppelin-jupyter</module>-->
+                <module>zeppelin-jupyter</module>
         <!--        <module>zeppelin-plugins</module>-->
         <module>zeppelin-distribution</module>
         <module>jdbc-tis</module>
