--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-
+    <parent>
+        <groupId>com.qlangtech.tis</groupId>
+        <artifactId>tis-parent</artifactId>
+        <version>2.0.1</version>
+    </parent>
     <groupId>org.apache.zeppelin</groupId>
     <artifactId>zeppelin</artifactId>
     <packaging>pom</packaging>
@@ -29,11 +33,11 @@
     <description>Zeppelin project</description>
     <url>https://zeppelin.apache.org</url>
 
-    <parent>
-        <groupId>org.apache</groupId>
-        <artifactId>apache</artifactId>
-        <version>17</version>
-    </parent>
+<!--    <parent>-->
+<!--        <groupId>org.apache</groupId>-->
+<!--        <artifactId>apache</artifactId>-->
+<!--        <version>17</version>-->
+<!--    </parent>-->
 
     <licenses>
         <license>
@@ -218,7 +222,7 @@
         <!-- to be able to exclude some tests using command line -->
         <tests.to.exclude/>
 
-        <tis.version>3.7.2</tis.version>
+        <tis.version>3.8.0</tis.version>
         <tisasm.oss.put.skip>true</tisasm.oss.put.skip>
         <tisasm-maven-plugin.version>1.0.6</tisasm-maven-plugin.version>
     </properties>
