--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,18 @@
 
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>com.qlangtech.tis</groupId>
+        <artifactId>tis-parent</artifactId>
+        <version>2.0.5</version>
+    </parent>
+
+<!--    <parent>-->
+<!--        <groupId>org.apache</groupId>-->
+<!--        <artifactId>apache</artifactId>-->
+<!--        <version>17</version>-->
+<!--    </parent>-->
+
     <groupId>org.apache.zeppelin</groupId>
     <artifactId>zeppelin</artifactId>
     <packaging>pom</packaging>
@@ -29,11 +41,7 @@
     <description>Zeppelin project</description>
     <url>https://zeppelin.apache.org</url>
 
-    <parent>
-        <groupId>org.apache</groupId>
-        <artifactId>apache</artifactId>
-        <version>17</version>
-    </parent>
+
 
     <licenses>
         <license>
@@ -216,7 +224,7 @@
         <!-- to be able to exclude some tests using command line -->
         <tests.to.exclude/>
 
-        <tis.version>3.7.0</tis.version>
+        <tis.version>4.0.0</tis.version>
     </properties>
 
     <dependencyManagement>
