remove jdk.tools from hive-jdbc

--- a/jdbc/pom.xml
+++ b/jdbc/pom.xml
@@ -151,6 +151,10 @@
             <scope>provided</scope>
             <exclusions>
                 <exclusion>
+                    <groupId>jdk.tools</groupId>
+                    <artifactId>jdk.tools</artifactId>
+                </exclusion>
+                <exclusion>
                     <groupId>org.apache.hadoop</groupId>
                     <artifactId>hadoop-common</artifactId>
                 </exclusion>
